--- a/Day1-Expanding_Cards/style.css
+++ b/Day1-Expanding_Cards/style.css
@@ -47,6 +47,13 @@ body {
 
 .panel.active h3 {
     opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
+}
+
+@media(max-width: 768px) {
+    .panel:nth-child(2n) {
+        display: none;
+    }
 }
 
 @media(max-width: 480px) {
