--- a/Day10-FAQ/style.css
+++ b/Day10-FAQ/style.css
@@ -46,13 +46,16 @@ h1 {
     background-color: transparent;
     cursor: pointer;
     border: 0;
+    border-radius: 50%;
+    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
 }
 
-.faq button i.fas {
-    
-}
-
-.faq button i.fa-times {
+.faq-toggle i.fa-times {
     display: none;
 }
 
@@ -83,4 +86,17 @@ h1 {
 
 .faq.active .faq-text {
     display: block;
+}
+
+.faq.active .faq-toggle {
+    background-color: #9e9e9e;
+    color: #fff;
+}
+
+.faq.active .faq-toggle .fa-times {
+    display: block;
+}
+
+.faq.active .faq-toggle .fa-chevron-down {
+    display: none;
 }
